@@ -1,32 +1,32 @@
 // Improvise DB.
 // Database for  skills that can be summoned trough Randomize Spell/Improvised Song (Minstrel/Wanderer Skill).
-// Format: SkillID
+// Format: SkillID,Rate
 
 // Mage Skills
-10// Sight
-11// Napalm Beat
-12// Safety Wall
-13// Soul Strike
-14// Cold Bolt
-15// Frost Diver
-16// Stone Curse
-17// Fire Ball
-18// Fire Wall
-19// Fire Bolt
-20// Lightning Bolt
-21// Thunderstorm
+10,5000	// Sight
+11,5000	// Napalm Beat
+12,5000	// Safety Wall
+13,5000	// Soul Strike
+14,5000	// Cold Bolt
+15,5000	// Frost Diver
+16,5000	// Stone Curse
+17,5000	// Fire Ball
+18,5000	// Fire Wall
+19,5000	// Fire Bolt
+20,5000	// Lightning Bolt
+21,5000	// Thunderstorm
 
 // Wizard Skills
-80// Fire Pillar
-81// Sightrasher
-83// Meteor Storm
-84// Jupitel Thunder
-85// Lord of Vermilion
-86// Water Ball
-87// Ice Wall
-88// Frost Nova
-89// Storm Gust
-90// Earth Spike
-91// Heaven's Drive
-92// Quagmire
-93// Sense
+80,2500	// Fire Pillar
+81,2500	// Sightrasher
+83,2500	// Meteor Storm
+84,2500	// Jupitel Thunder
+85,2500	// Lord of Vermilion
+86,2500	// Water Ball
+87,2500	// Ice Wall
+88,2500	// Frost Nova
+89,2500	// Storm Gust
+90,2500	// Earth Spike
+91,2500	// Heaven's Drive
+92,2500	// Quagmire
+93,2500	// Sense
